# Demon

./: CMakeLists.txt  CMakeLists.txt.user.db3f06d  README.md  daemon.c  main.c  main.c.orig  makefile
include/: bool.h  config.h  cstring.h  dir.h  file.h  list.h  list.h.orig  modtime.h  parse.h  sync.h
src/: config.c  cstring.c  dir.c  file.c  list.c  list.c.orig  list.c~  modtime.c  parse.c  sync.c
